5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1724_2522.log
== TEST (2019-05-14 22:54:51) 
-- CODE:
n = int(input("serie:"))
t = 0
pi = 0
while t<=n:
	pi = pi*(1 + (1+t)/3+(2*t))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:54:58) 
-- CODE:
n = int(input("serie:"))
t = 0
pi = 0
while t<=n:
	pi = pi*(1 + (1+t)/3+(2*t))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:55:00) 
-- CODE:
n = int(input("serie:"))
t = 0
pi = 0
while t<=n:
	pi = pi*(1 + (1+t)/3+(2*t))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
0.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:55:16) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (1+t)/3+(2*t))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
202333336640.1463
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:56:05) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3+(2*(t-1))
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:56:20) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3+(2*(t-1))
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:56:38) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 1
while t<=n:
	pi = pi*(1 + t/3+(2*(t-1))
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:56:53) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (1+t)/3+(2*t))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
202333336640.1463
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:57:01) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3+(2*t))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
108282323630.1783
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:57:09) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3+(2*(t-2))
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:57:18) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3+(2*(t))
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:57:25) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3+(2)
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:57:33) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + (t)/3
	t = t + 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:57:44) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + t/3)
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
35151.7146776406
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:58:29) 
-- CODE:
n = int(input("serie: "))
t = 0
pi = 1
while t<=n:
	pi = pi*(1 + t/(1+(2*t)))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
76.843379327
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:58:40) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 1
while t<=n:
	pi = pi*(1 + t/(1+(2*t)))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
76.843379327
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 22:58:49) 
-- CODE:
n = int(input("serie: "))
t = 1
pi = 1
while t<=n:
	pi = pi*(1 + t/(1+(2*t)))
	t = t + 1
print(round(pi*2, 10))
-- OUTPUT:
76.843379327
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:01:58) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1
while 0<t:
	pi = pi*(1 + n/(1+(2*n)))
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
98.277474288
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:02:06) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1
while 0<t:
	pi = pi*(1 + n/(1+(2*n)))
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
98.277474288
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:04:04) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1
while 0<t:
	pi = 1 + (n/(1+(2*n))*pi
	t = t - 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:04:48) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1
a = 1 + 
while 0<t:
	pi = 1 + (t/(1+(2*t))*pi
	t = t - 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 4
    a = 1 + 
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:04:55) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	pi = 1 + (t/(1+(2*t))*pi
	t = t - 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 6
    t = t - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:05:26) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a*pi
	t = t - 1
print(round(pi*2, 10))
-- ERROR:
File "XXXX", line 7
    t = t - 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:05:34) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:05:41) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:05:45) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:05:50) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:05:54) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:06:24) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	print(a)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
21
19
17
15
13
11
9
7
5
3
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:06:35) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1 
while 0<t:
	a = 1 + (2*t)
	print(a)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
21
19
17
15
13
11
9
7
5
3
3.1411060216
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:09:03) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1.5
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1413699476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 23:09:07) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1.5
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- OUTPUT:
3.1413699476
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 23:09:17) 
-- CODE:
n = int(input("serie: "))
t = n
pi = 1.5
while 0<t:
	a = 1 + (2*t)
	pi = 1 + (t/a)*pi
	t = t - 1
print(round(pi*2, 10))
-- EXECUTION TIME:
0.152799
-- TEST CASE 1:
---- input:
10
---- correct output:
3.1413699476
---- user output:
3.1413699476
-- TEST CASE 2:
---- input:
150
---- correct output:
3.1415926536
---- user output:
3.1415926536
-- TEST CASE 3:
---- input:
100
---- correct output:
3.1415926536 
---- user output:
3.1415926536
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
